# DokerFace

./: .gitignore  AGENTS.md  Architecture.md  Feature.md  Frontend.md  GeminiFrontendGoalPrompt.md  README.md  README_zh.md  openapi.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  logging.py  main.py
backend/app/accounts/: models.py
backend/app/admin/: __init__.py  accounts.py  api.py  models.py
backend/app/api/: export_openapi.py  health.py
backend/app/auth/: api.py  bootstrap.py  dependencies.py  passwords.py  session_tokens.py  sessions.py
backend/app/chat/: __init__.py  models.py  service.py
backend/app/db/: dependencies.py  session.py
backend/app/game_engine/: __init__.py  actor.py  (+3 more)
backend/migrations/: env.py
backend/tests/: test_accounts_persistence.py  test_admin_accounts.py  test_admin_api.py  test_auth_api.py  test_auth_dependencies.py  test_bootstrap.py  test_game_handlers.py  test_health.py  test_match_actor.py  test_match_coordinator.py  test_match_registry.py  test_matches_api.py  test_passwords.py  test_players_api.py  test_pokerkit_adapter.py  test_pokerkit_properties.py  test_rating_initialization.py  test_rating_replay.py  test_ratings.py  test_ratings_api.py  test_realtime_auth.py  test_realtime_schemas.py  test_realtime_server.py  test_room_config.py  test_room_handlers.py  test_room_registry.py  test_rooms_api.py  test_session_tokens.py  test_sessions.py  test_startup_recovery.py  test_statistics_api.py  test_statistics_reducer.py  test_statistics_service.py
(+116 files in other folders)
