[project]
name = "dokerface-backend"
version = "0.1.0"
description = "Server-authoritative backend for DokerFace"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16,<2",
    "asyncpg>=0.30,<1",
    "fastapi>=0.116,<1",
    "pillow>=11,<12",
    "pokerkit>=0.6,<1",
    "pwdlib[argon2]>=0.2,<1",
    "pydantic-settings>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "python-socketio>=5.13,<6",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "structlog>=25,<26",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21,<1",
    "httpx>=0.28,<1",
    "hypothesis>=6.135,<7",
    "pyright>=1.1.402,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
    "testcontainers[postgres]>=4.10,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
